--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 </head>
 <body>
   <div class="content">
-    <h1>Welcome to My Animated Website</h1>
-    <p>Experience the smooth motion and clean design</p>
+    <h1>Welcome to My Website</h1>
+    <p>skills will develop you</p>
     <button class="btn">Get Started</button>
   </div>
 </body>
